--- a/src/app/views/public/authentication/change-password/change-password.component.html
+++ b/src/app/views/public/authentication/change-password/change-password.component.html
@@ -1,5 +1,5 @@
 <div class="card-cont d-flex justify-content-center align-items-center">
-  <div class="card w-50 p-3 mt-5">
+  <div class="card col-12 col-sm-10 col-md-8 col-lg-6 p-3 mt-5">
     <h3 class="text-center">Change Password</h3>
     <div class="alert alert-warning mt-1" *ngIf="hasValidationError">
       <p>Please fix the following</p>
@@ -18,12 +18,8 @@
         >
           <div class="form-group">
             <label for="currentPassword">Current Password</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text h-100">
-                  <i class="fa fa-lock" aria-hidden="true"></i>
-                </div>
-              </div>
+            <div class="input-group mt-2">
+              <span class="input-group-text"><i class="fa fa-lock"></i></span>
               <input
                 [type]="isShowCurrentPassword ? 'text' : 'password'"
                 class="form-control"
@@ -32,18 +28,20 @@
                 formControlName="currentPassword"
                 autocomplete="current-password"
               />
-              <div class="input-group-append">
-                <i
-                  class="input-group-text fa h-100 d-flex justify-content-center align-items-center"
-                  [ngClass]="isShowCurrentPassword ? 'fa-eye-slash' : 'fa-eye'"
-                  (click)="changeCurrentPasswordInput()"
-                  aria-hidden="true"
-                  data-toggle="tooltip"
-                  [title]="
-                    isShowCurrentPassword ? 'Hide password' : 'Show password'
+              <span
+                class="input-group-text"
+                (click)="changeCurrentPasswordInput()"
+                aria-hidden="true"
+                data-toggle="tooltip"
+                [title]="
+                  isShowCurrentPassword ? 'Show password' : 'Hide Password'
+                "
+                ><i
+                  [ngClass]="
+                    isShowCurrentPassword ? 'fa fa-eye' : 'fa fa-eye-slash'
                   "
-                ></i>
-              </div>
+                ></i
+              ></span>
             </div>
             <div
               *ngIf="
@@ -60,12 +58,8 @@
           </div>
           <div class="form-group mt-3">
             <label for="newPassword">New Password</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text h-100">
-                  <i class="fa fa-lock" aria-hidden="true"></i>
-                </div>
-              </div>
+            <div class="input-group mt-2">
+              <span class="input-group-text"><i class="fa fa-lock"></i></span>
               <input
                 [type]="isShowNewPassword ? 'text' : 'password'"
                 class="form-control"
@@ -74,18 +68,20 @@
                 formControlName="newPassword"
                 autocomplete="new-password"
               />
-              <div class="input-group-append">
-                <i
-                  class="input-group-text fa h-100 d-flex justify-content-center align-items-center"
-                  [ngClass]="isShowNewPassword ? 'fa-eye-slash' : 'fa-eye'"
-                  (click)="changeNewPasswordInput()"
-                  aria-hidden="true"
-                  data-toggle="tooltip"
-                  [title]="
-                    isShowNewPassword ? 'Hide password' : 'Show password'
+              <span
+                class="input-group-text"
+                (click)="changeNewPasswordInput()"
+                aria-hidden="true"
+                data-toggle="tooltip"
+                [title]="
+                  isShowCurrentPassword ? 'Show password' : 'Hide Password'
+                "
+                ><i
+                  [ngClass]="
+                    isShowCurrentPassword ? 'fa fa-eye' : 'fa fa-eye-slash'
                   "
-                ></i>
-              </div>
+                ></i
+              ></span>
             </div>
             <div
               *ngIf="
@@ -135,12 +131,9 @@
           </div>
           <div class="form-group mt-3">
             <label for="confirmPassword">Confirm Password</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <div class="input-group-text h-100">
-                  <i class="fa fa-lock" aria-hidden="true"></i>
-                </div>
-              </div>
+
+            <div class="input-group mt-2">
+              <span class="input-group-text"><i class="fa fa-lock"></i></span>
               <input
                 [type]="isShowConfirmPassword ? 'text' : 'password'"
                 class="form-control"
@@ -149,18 +142,20 @@
                 formControlName="confirmPassword"
                 autocomplete="new-password"
               />
-              <div class="input-group-append">
-                <i
-                  class="input-group-text fa h-100 d-flex justify-content-center align-items-center"
-                  [ngClass]="isShowConfirmPassword ? 'fa-eye-slash' : 'fa-eye'"
-                  (click)="changeConfirmPasswordInput()"
-                  aria-hidden="true"
-                  data-toggle="tooltip"
-                  [title]="
-                    isShowConfirmPassword ? 'Hide password' : 'Show password'
+              <span
+                class="input-group-text"
+                (click)="changeConfirmPasswordInput()"
+                aria-hidden="true"
+                data-toggle="tooltip"
+                [title]="
+                  isShowCurrentPassword ? 'Show password' : 'Hide Password'
+                "
+                ><i
+                  [ngClass]="
+                    isShowCurrentPassword ? 'fa fa-eye' : 'fa fa-eye-slash'
                   "
-                ></i>
-              </div>
+                ></i
+              ></span>
             </div>
             <div
               *ngIf="
