--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex flex-column flex-sm-row justify-content-sm-between mb-3">
       <h3>Purchase Orders</h3>
     </div>
-    <div class="d-flex flex-column flex-sm-row justify-content-sm-between">
+    <div class="d-flex flex-column flex-sm-row justify-content-sm-between" *ngIf="userRole === 'Admin'">
       <div class="col-12 col-sm-6 col-md-5 col-lg-4 d-flex">
         <input
           type="search"
